--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Columnas</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/estilos.css">
+    <link rel="stylesheet" href="fonts.css">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 </head>
 
@@ -15,6 +16,33 @@
             <h1>Header</h1>
         </div>
     </header>
+
+	<div class="social">
+		<!-- Para meter una lista ul con 5 li y links: ul>li+5>a + TAB . MUY GROSO!!!! -->
+		<ul>
+			<li><a href="https://www.facebook.com/rodrigo.garay.900" target="_blank" class="icon-facebook3"></a></li>
+			<li><a href="https://twitter.com/R0dr1g0_G4r4y" target="_blank" class="icon-twitter3"></a></li>
+			<li><a href="https://plus.google.com/+RodrigoGaray" target="_blank" class="icon-google-plus3"></a></li>
+			<!-- <li><a href="http://www.pinterest.com/falconmasters" target="_blank" class="icon-pinterest"></a></li> -->
+			<li><a href="mailto:rodgaraygmail.com" class="icon-mail4"></a></li>
+		</ul>
+		
+		<!-- Para escribir en simultaneo cmd+click en el lugar, con escape salgo -->
+		<!--
+		<ul>asas
+			<li><a href="" class="pruebaRod"></a></li>
+			<li><a href="" class="pruebaRod"></a></li>
+			<li><a href="" class="pruebaRod"></a></li>
+			<li><a href="" class="pruebaRod"></a></li>
+			<li><a href="" class="pruebaRod"></a></li>
+			<li><a href="" class="pruebaRod"></a></li>
+			<li><a href="" class="pruebaRod"></a></li>
+			<li><a href="" class="pruebaRod"></a></li>
+		</ul>
+		-->
+	</div>
+
+
     <div class="container">
     	<!-- Acá arranco una fila -->
         <section class="main row">
